--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,7 +3,7 @@
     "rules": {
         "declaration-block-no-duplicate-properties": true,
         "no-duplicate-selectors": true,
-        "property-case": "lower",
+        "declaration-property-value-no-unknown": true,
         "value-keyword-case": "lower",
         "selector-type-case": "lower",
         "block-no-empty": true
