--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -1,7 +1,9 @@
 name: PR Validation
+
 on:
-  pull_request:
+  pull_request
     branches: [develop]
+
 jobs:
   linting:
     runs-on: ubuntu-latest
@@ -10,11 +12,14 @@ jobs:
       - uses: actions/setup-node@v4     
         with:
           node-version: 20
-      run: npm install htmlhint stylelint
+      - name: Install dependencies
+        run: npm install htmlhint stylelint
+
       - name: Lint HTML
         run: npx htmlhint@1.1.4 "src/*.html" 
       - name: Lint CSS
         run: npx stylelint@15.11.0 "styles/*.css"  
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -24,4 +29,4 @@ jobs:
           node-version: 20
       - run: npm install
       - name: Build 
-        run: npm run build  
+        run: npm run build
